Add experimental support for Java 11 + Java 11-only support for CRC32C (falls back to CRC32 on Java 8)
Use -DskipJmh instead of -DskipTests to skip running microbenchmarks